load original tickets file to dataframe

--- a/main.ipynb
+++ b/main.ipynb
@@ -33,11 +33,6 @@
     "\n",
     "\n",
     "# **** SETUP ****\n",
-    "\n",
-    "# change to match your filesystem\n",
-    "DATA_DIR = \"../data/\"\n",
-    "DEFAULT_RECEIPTS_FILE = os.path.join(DATA_DIR, \"tickets.json\")\n",
-    "# change to match your gcloud project \n",
     "PROJECT_NAME = \"deb-01-372112\"\n",
     "DATASET_NAME = \"tickets\"\n",
     "\n",
@@ -108,6 +103,321 @@
     "client = bigquery.Client()\n",
     "\n",
     "logger.info(f\"Setup Completed\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Tickets' BQ Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO ][2023-01-08 13:43:54,248][2665781056:0006] : Created Tickets dataset: deb-01-372112:tickets\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_id = f\"{PROJECT_NAME}.{DATASET_NAME}\"\n",
+    "dataset = bigquery.Dataset(dataset_id)\n",
+    "dataset.location = \"US\"\n",
+    "dataset = client.create_dataset(dataset, exists_ok=True)\n",
+    "\n",
+    "logger.info(f\"Created Tickets dataset: {dataset.full_dataset_id}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load original tickets file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG][2023-01-08 14:01:39,509][420054589:0007] : attempting to process: ./data/tickets.json\n",
+      "[INFO ][2023-01-08 14:01:39,878][420054589:0017] : loaded 4096 rows from: ./data/tickets.json\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eticket_num</th>\n",
+       "      <th>confirmation</th>\n",
+       "      <th>ticket_date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>seat</th>\n",
+       "      <th>status</th>\n",
+       "      <th>airline</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "      <th>passenger</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>498-938211-0795</td>\n",
+       "      <td>ZVFDC4</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>723.42</td>\n",
+       "      <td>31I</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'China Eastern Airlines', 'iata': 'MU...</td>\n",
+       "      <td>{'name': 'Montreal / Pierre Elliott Trudeau In...</td>\n",
+       "      <td>{'name': 'Chicago Midway International Airport...</td>\n",
+       "      <td>{'first_name': 'Robert', 'last_name': 'Brown',...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>482-850738-6048</td>\n",
+       "      <td>IL5GUI</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>765.18</td>\n",
+       "      <td>29B</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Hawaiian Airlines', 'iata': 'HA', 'i...</td>\n",
+       "      <td>{'name': 'Longdongbao Airport', 'city': 'Guiya...</td>\n",
+       "      <td>{'name': 'Ninoy Aquino International Airport',...</td>\n",
+       "      <td>{'first_name': 'Laura', 'last_name': 'Kent', '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>275-207321-8092</td>\n",
+       "      <td>CYEFBC</td>\n",
+       "      <td>2022-03-21</td>\n",
+       "      <td>753.89</td>\n",
+       "      <td>26I</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Wizz Air', 'iata': 'W6', 'icao': 'WZ...</td>\n",
+       "      <td>{'name': 'Licenciado Gustavo Díaz Ordaz Intern...</td>\n",
+       "      <td>{'name': 'Ibiza Airport', 'city': 'Ibiza', 'co...</td>\n",
+       "      <td>{'first_name': 'Lisa', 'last_name': 'Tucker', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>246-793315-3102</td>\n",
+       "      <td>ZNGPC2</td>\n",
+       "      <td>2022-03-22</td>\n",
+       "      <td>793.89</td>\n",
+       "      <td>15A</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'AirAsia', 'iata': 'AK', 'icao': 'AXM...</td>\n",
+       "      <td>{'name': 'El Tepual Airport', 'city': 'Puerto ...</td>\n",
+       "      <td>{'name': 'Gdańsk Lech Wałęsa Airport', 'city':...</td>\n",
+       "      <td>{'first_name': 'Matthew', 'last_name': 'Yates'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>091-128904-1226</td>\n",
+       "      <td>MGSBD9</td>\n",
+       "      <td>2022-03-24</td>\n",
+       "      <td>820.25</td>\n",
+       "      <td>17F</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Xiamen Airlines', 'iata': 'MF', 'ica...</td>\n",
+       "      <td>{'name': 'Baltimore/Washington International T...</td>\n",
+       "      <td>{'name': 'London Gatwick Airport', 'city': 'Lo...</td>\n",
+       "      <td>{'first_name': 'Megan', 'last_name': 'Villanue...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>115-196069-8963</td>\n",
+       "      <td>XFYQC0</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>892.69</td>\n",
+       "      <td>18C</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Air New Zealand', 'iata': 'NZ', 'ica...</td>\n",
+       "      <td>{'name': 'Platov International Airport', 'city...</td>\n",
+       "      <td>{'name': 'Cincinnati Northern Kentucky Interna...</td>\n",
+       "      <td>{'first_name': 'Sarah', 'last_name': 'Hall', '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>396-673460-1326</td>\n",
+       "      <td>N5UOOZ</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>889.53</td>\n",
+       "      <td>3C</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Jeju Air', 'iata': '7C', 'icao': 'JJ...</td>\n",
+       "      <td>{'name': 'Winnipeg / James Armstrong Richardso...</td>\n",
+       "      <td>{'name': 'Naha Airport', 'city': 'Okinawa', 'c...</td>\n",
+       "      <td>{'first_name': 'Seth', 'last_name': 'Thompson'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>380-894599-8109</td>\n",
+       "      <td>PAA19Y</td>\n",
+       "      <td>2022-03-22</td>\n",
+       "      <td>706.78</td>\n",
+       "      <td>7D</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'American Airlines', 'iata': 'AA', 'i...</td>\n",
+       "      <td>{'name': 'Ontario International Airport', 'cit...</td>\n",
+       "      <td>{'name': 'Yangon International Airport', 'city...</td>\n",
+       "      <td>{'first_name': 'Jennifer', 'last_name': 'Garci...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>614-960971-2686</td>\n",
+       "      <td>EF4BHJ</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>486.40</td>\n",
+       "      <td>24J</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Juneyao Airlines', 'iata': 'HO', 'ic...</td>\n",
+       "      <td>{'name': 'Luis Munoz Marin International Airpo...</td>\n",
+       "      <td>{'name': 'Koltsovo Airport', 'city': 'Yekateri...</td>\n",
+       "      <td>{'first_name': 'Becky', 'last_name': 'Clark', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>481-321233-0702</td>\n",
+       "      <td>FVM9EE</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>855.93</td>\n",
+       "      <td>16A</td>\n",
+       "      <td>active</td>\n",
+       "      <td>{'name': 'Royal Air Maroc', 'iata': 'AT', 'ica...</td>\n",
+       "      <td>{'name': 'Edmonton International Airport', 'ci...</td>\n",
+       "      <td>{'name': 'Taiyuan Wusu Airport', 'city': 'Taiy...</td>\n",
+       "      <td>{'first_name': 'Ronald', 'last_name': 'Cook', ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       eticket_num confirmation ticket_date   price seat  status  \\\n",
+       "0  498-938211-0795       ZVFDC4  2022-03-23  723.42  31I  active   \n",
+       "1  482-850738-6048       IL5GUI  2022-03-23  765.18  29B  active   \n",
+       "2  275-207321-8092       CYEFBC  2022-03-21  753.89  26I  active   \n",
+       "3  246-793315-3102       ZNGPC2  2022-03-22  793.89  15A  active   \n",
+       "4  091-128904-1226       MGSBD9  2022-03-24  820.25  17F  active   \n",
+       "5  115-196069-8963       XFYQC0  2022-03-23  892.69  18C  active   \n",
+       "6  396-673460-1326       N5UOOZ  2022-03-23  889.53   3C  active   \n",
+       "7  380-894599-8109       PAA19Y  2022-03-22  706.78   7D  active   \n",
+       "8  614-960971-2686       EF4BHJ  2022-03-23  486.40  24J  active   \n",
+       "9  481-321233-0702       FVM9EE  2022-03-23  855.93  16A  active   \n",
+       "\n",
+       "                                             airline  \\\n",
+       "0  {'name': 'China Eastern Airlines', 'iata': 'MU...   \n",
+       "1  {'name': 'Hawaiian Airlines', 'iata': 'HA', 'i...   \n",
+       "2  {'name': 'Wizz Air', 'iata': 'W6', 'icao': 'WZ...   \n",
+       "3  {'name': 'AirAsia', 'iata': 'AK', 'icao': 'AXM...   \n",
+       "4  {'name': 'Xiamen Airlines', 'iata': 'MF', 'ica...   \n",
+       "5  {'name': 'Air New Zealand', 'iata': 'NZ', 'ica...   \n",
+       "6  {'name': 'Jeju Air', 'iata': '7C', 'icao': 'JJ...   \n",
+       "7  {'name': 'American Airlines', 'iata': 'AA', 'i...   \n",
+       "8  {'name': 'Juneyao Airlines', 'iata': 'HO', 'ic...   \n",
+       "9  {'name': 'Royal Air Maroc', 'iata': 'AT', 'ica...   \n",
+       "\n",
+       "                                              origin  \\\n",
+       "0  {'name': 'Montreal / Pierre Elliott Trudeau In...   \n",
+       "1  {'name': 'Longdongbao Airport', 'city': 'Guiya...   \n",
+       "2  {'name': 'Licenciado Gustavo Díaz Ordaz Intern...   \n",
+       "3  {'name': 'El Tepual Airport', 'city': 'Puerto ...   \n",
+       "4  {'name': 'Baltimore/Washington International T...   \n",
+       "5  {'name': 'Platov International Airport', 'city...   \n",
+       "6  {'name': 'Winnipeg / James Armstrong Richardso...   \n",
+       "7  {'name': 'Ontario International Airport', 'cit...   \n",
+       "8  {'name': 'Luis Munoz Marin International Airpo...   \n",
+       "9  {'name': 'Edmonton International Airport', 'ci...   \n",
+       "\n",
+       "                                         destination  \\\n",
+       "0  {'name': 'Chicago Midway International Airport...   \n",
+       "1  {'name': 'Ninoy Aquino International Airport',...   \n",
+       "2  {'name': 'Ibiza Airport', 'city': 'Ibiza', 'co...   \n",
+       "3  {'name': 'Gdańsk Lech Wałęsa Airport', 'city':...   \n",
+       "4  {'name': 'London Gatwick Airport', 'city': 'Lo...   \n",
+       "5  {'name': 'Cincinnati Northern Kentucky Interna...   \n",
+       "6  {'name': 'Naha Airport', 'city': 'Okinawa', 'c...   \n",
+       "7  {'name': 'Yangon International Airport', 'city...   \n",
+       "8  {'name': 'Koltsovo Airport', 'city': 'Yekateri...   \n",
+       "9  {'name': 'Taiyuan Wusu Airport', 'city': 'Taiy...   \n",
+       "\n",
+       "                                           passenger  \n",
+       "0  {'first_name': 'Robert', 'last_name': 'Brown',...  \n",
+       "1  {'first_name': 'Laura', 'last_name': 'Kent', '...  \n",
+       "2  {'first_name': 'Lisa', 'last_name': 'Tucker', ...  \n",
+       "3  {'first_name': 'Matthew', 'last_name': 'Yates'...  \n",
+       "4  {'first_name': 'Megan', 'last_name': 'Villanue...  \n",
+       "5  {'first_name': 'Sarah', 'last_name': 'Hall', '...  \n",
+       "6  {'first_name': 'Seth', 'last_name': 'Thompson'...  \n",
+       "7  {'first_name': 'Jennifer', 'last_name': 'Garci...  \n",
+       "8  {'first_name': 'Becky', 'last_name': 'Clark', ...  \n",
+       "9  {'first_name': 'Ronald', 'last_name': 'Cook', ...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# change to match your filesystem\n",
+    "DATA_DIR = \"./data/\"\n",
+    "DEFAULT_RECEIPTS_FILE = os.path.join(DATA_DIR, \"tickets.json\")\n",
+    "\n",
+    "# receipts data file name\n",
+    "filename = DEFAULT_RECEIPTS_FILE\n",
+    "logger.debug(f\"attempting to process: {filename}\")\n",
+    "\n",
+    "# *** always perform checks first ***\n",
+    "# check if the file exists\n",
+    "assert os.path.exists(filename), f\"Data file does not exists: '{filename}'\"\n",
+    "# check if the file contains any data. Header row alone is 78 bytes. size > 78\n",
+    "assert os.path.getsize(filename) > 78, f\"Data file size incorrect; does not seem to contain data: '{filename}'\"\n",
+    "\n",
+    "# load into dataframe\n",
+    "df = pd.read_json(filename, lines=True)\n",
+    "logger.info(f\"loaded {len(df.index)} rows from: {filename}\")\n",
+    "\n",
+    "# *** always perform check at the end ***\n",
+    "# check schema: contains all expected columns?\n",
+    "expected_columns = ['eticket_num', 'confirmation', 'ticket_date', 'price', 'seat', 'status', 'airline', 'origin', 'destination', 'passenger']\n",
+    "for col in expected_columns:\n",
+    "    assert col in list(df.columns), f\"Data file missing required column: {col}\"\n",
+    "\n",
+    "# assign & remember receipts dataframe\n",
+    "receipts_df = df\n",
+    "display(receipts_df.head(n=10))"
    ]
   }
  ],
