Load airports dim to BigQuery

--- a/main.ipynb
+++ b/main.ipynb
@@ -1095,6 +1095,298 @@
     "\n",
     "logger.info(f\"loaded products dim\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Airports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG][2023-01-13 11:31:20,678][2564274586:0004] : getting unique aiports...\n",
+      "[INFO ][2023-01-13 11:31:20,978][2564274586:0015] : customers dim - found 386 rows\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>icao</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>altitude</th>\n",
+       "      <th>tz_timezone</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>iata</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AUH</th>\n",
+       "      <td>Abu Dhabi International Airport</td>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>OMAA</td>\n",
+       "      <td>24.43</td>\n",
+       "      <td>54.65</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>Asia/Dubai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAD</th>\n",
+       "      <td>Adolfo Suárez Madrid–Barajas Airport</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>LEMD</td>\n",
+       "      <td>40.47</td>\n",
+       "      <td>-3.56</td>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>Europe/Madrid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CWB</th>\n",
+       "      <td>Afonso Pena Airport</td>\n",
+       "      <td>Curitiba</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>SBCT</td>\n",
+       "      <td>-25.53</td>\n",
+       "      <td>-49.18</td>\n",
+       "      <td>2988.0</td>\n",
+       "      <td>America/Sao_Paulo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MCP</th>\n",
+       "      <td>Alberto Alcolumbre Airport</td>\n",
+       "      <td>Macapa</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>SBMQ</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>-51.07</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>America/Fortaleza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ABQ</th>\n",
+       "      <td>Albuquerque International Sunport</td>\n",
+       "      <td>Albuquerque</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>KABQ</td>\n",
+       "      <td>35.04</td>\n",
+       "      <td>-106.61</td>\n",
+       "      <td>5355.0</td>\n",
+       "      <td>America/Denver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZUH</th>\n",
+       "      <td>Zhuhai Jinwan Airport</td>\n",
+       "      <td>Zhuhai</td>\n",
+       "      <td>China</td>\n",
+       "      <td>ZGSD</td>\n",
+       "      <td>22.01</td>\n",
+       "      <td>113.38</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Asia/Shanghai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MCZ</th>\n",
+       "      <td>Zumbi dos Palmares Airport</td>\n",
+       "      <td>Maceio</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>SBMO</td>\n",
+       "      <td>-9.51</td>\n",
+       "      <td>-35.79</td>\n",
+       "      <td>387.0</td>\n",
+       "      <td>America/Fortaleza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZRH</th>\n",
+       "      <td>Zürich Airport</td>\n",
+       "      <td>Zurich</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>LSZH</td>\n",
+       "      <td>47.46</td>\n",
+       "      <td>8.55</td>\n",
+       "      <td>1416.0</td>\n",
+       "      <td>Europe/Zurich</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MDQ</th>\n",
+       "      <td>Ástor Piazzola International Airport</td>\n",
+       "      <td>Mar Del Plata</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>SAZM</td>\n",
+       "      <td>-37.93</td>\n",
+       "      <td>-57.57</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>America/Buenos_Aires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>URC</th>\n",
+       "      <td>Ürümqi Diwopu International Airport</td>\n",
+       "      <td>Urumqi</td>\n",
+       "      <td>China</td>\n",
+       "      <td>ZWWW</td>\n",
+       "      <td>43.91</td>\n",
+       "      <td>87.47</td>\n",
+       "      <td>2125.0</td>\n",
+       "      <td>Asia/Shanghai</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>386 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      name           city  \\\n",
+       "iata                                                        \n",
+       "AUH        Abu Dhabi International Airport      Abu Dhabi   \n",
+       "MAD   Adolfo Suárez Madrid–Barajas Airport         Madrid   \n",
+       "CWB                    Afonso Pena Airport       Curitiba   \n",
+       "MCP             Alberto Alcolumbre Airport         Macapa   \n",
+       "ABQ      Albuquerque International Sunport    Albuquerque   \n",
+       "...                                    ...            ...   \n",
+       "ZUH                  Zhuhai Jinwan Airport         Zhuhai   \n",
+       "MCZ             Zumbi dos Palmares Airport         Maceio   \n",
+       "ZRH                         Zürich Airport         Zurich   \n",
+       "MDQ   Ástor Piazzola International Airport  Mar Del Plata   \n",
+       "URC    Ürümqi Diwopu International Airport         Urumqi   \n",
+       "\n",
+       "                   country  icao  latitude  longitude  altitude  \\\n",
+       "iata                                                              \n",
+       "AUH   United Arab Emirates  OMAA     24.43      54.65      88.0   \n",
+       "MAD                  Spain  LEMD     40.47      -3.56    1998.0   \n",
+       "CWB                 Brazil  SBCT    -25.53     -49.18    2988.0   \n",
+       "MCP                 Brazil  SBMQ      0.05     -51.07      56.0   \n",
+       "ABQ          United States  KABQ     35.04    -106.61    5355.0   \n",
+       "...                    ...   ...       ...        ...       ...   \n",
+       "ZUH                  China  ZGSD     22.01     113.38      23.0   \n",
+       "MCZ                 Brazil  SBMO     -9.51     -35.79     387.0   \n",
+       "ZRH            Switzerland  LSZH     47.46       8.55    1416.0   \n",
+       "MDQ              Argentina  SAZM    -37.93     -57.57      72.0   \n",
+       "URC                  China  ZWWW     43.91      87.47    2125.0   \n",
+       "\n",
+       "               tz_timezone  \n",
+       "iata                        \n",
+       "AUH             Asia/Dubai  \n",
+       "MAD          Europe/Madrid  \n",
+       "CWB      America/Sao_Paulo  \n",
+       "MCP      America/Fortaleza  \n",
+       "ABQ         America/Denver  \n",
+       "...                    ...  \n",
+       "ZUH          Asia/Shanghai  \n",
+       "MCZ      America/Fortaleza  \n",
+       "ZRH          Europe/Zurich  \n",
+       "MDQ   America/Buenos_Aires  \n",
+       "URC          Asia/Shanghai  \n",
+       "\n",
+       "[386 rows x 8 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# start from the tickets\n",
+    "df = tickets_df\n",
+    "\n",
+    "logger.debug(f\"getting unique aiports...\")\n",
+    "\n",
+    "airports_cols = ['origin.name', 'origin.city', 'origin.country', 'origin.iata', 'origin.icao', 'origin.latitude', 'origin.longitude', 'origin.altitude', 'origin.tz_timezone']\n",
+    "\n",
+    "# get unique airports and only selecy them\n",
+    "df = df.groupby(airports_cols).all()\n",
+    "df = df.reset_index().loc[:, airports_cols]\n",
+    "\n",
+    "#rename columns\n",
+    "df = df.rename(columns={'origin.name': 'name', 'origin.city': 'city', 'origin.country': 'country', 'origin.iata': 'iata', 'origin.icao': 'icao', 'origin.latitude': 'latitude', 'origin.longitude': 'longitude', 'origin.altitude': 'altitude', 'origin.tz_timezone': 'tz_timezone'})\n",
+    "df = df.set_index(keys='iata')\n",
+    "logger.info(f\"customers dim - found {len(df.index)} rows\")\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading to BigQuery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO ][2023-01-13 11:33:30,646][1947479415:0029] : loading table: 'deb-01-372112.tickets.airports'\n",
+      "[INFO ][2023-01-13 11:33:33,914][1947479415:0034] : loaded 386 rows into deb-01-372112:tickets.airports\n",
+      "[INFO ][2023-01-13 11:33:33,917][339070838:0006] : loaded airports dim\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the table name and schema from TABLE_METADATA config param\n",
+    "table_name = f\"{PROJECT_NAME}.{DATASET_NAME}.{TABLE_METADATA['airports']['table_name']}\"\n",
+    "schema = schema=TABLE_METADATA['airports']['schema']\n",
+    "# load the dataframe\n",
+    "load_table(df, client, table_name, schema)\n",
+    "logger.info(f\"loaded airports dim\")"
+   ]
   }
  ],
  "metadata": {
