Load passenger dim to bigquery

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 11:08:09,334][1559942662:0078] : Creating bigquery client\n",
-      "[INFO ][2023-01-13 11:08:09,338][1559942662:0081] : Setup Completed\n"
+      "[DEBUG][2023-01-13 15:38:59,202][406539018:0078] : Creating bigquery client\n",
+      "[INFO ][2023-01-13 15:38:59,211][406539018:0081] : Setup Completed\n"
      ]
     }
    ],
@@ -74,14 +74,14 @@
     "            bigquery.SchemaField('first_name', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('last_name', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('gender', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('birth_date', 'date_time', mode='REQUIRED'),\n",
+    "            bigquery.SchemaField('birth_date', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('email', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('street', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('city', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('state', 'string', mode='REQUIRED'),\n",
     "            bigquery.SchemaField('zip', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('start_date', 'date_time', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('end_date', 'date_time', mode='REQUIRED'),\n",
+    "            bigquery.SchemaField('start_date', 'string', mode='REQUIRED'),\n",
+    "            bigquery.SchemaField('end_date', 'string', mode='REQUIRED'),\n",
     "\n",
     "        ]\n",
     "    }  \n",
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-01-13 11:08:12,827][2665781056:0006] : Created Tickets dataset: deb-01-372112:tickets\n"
+      "[INFO ][2023-01-13 15:08:14,532][2665781056:0006] : Created Tickets dataset: deb-01-372112:tickets\n"
      ]
     }
    ],
@@ -146,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 11:08:14,506][2599063938:0004] : attempting to process: ./data/tickets.json\n",
-      "[INFO ][2023-01-13 11:08:14,963][2599063938:0017] : loaded 4096 rows from: ./data/tickets.json\n"
+      "[DEBUG][2023-01-13 15:08:17,051][2599063938:0004] : attempting to process: ./data/tickets.json\n",
+      "[INFO ][2023-01-13 15:08:17,652][2599063938:0017] : loaded 4096 rows from: ./data/tickets.json\n"
      ]
     },
     {
@@ -555,15 +555,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 11:10:36,128][137921925:0004] : getting uniques products...\n",
-      "[INFO ][2023-01-13 11:10:36,487][137921925:0018] : airlines dim - found 48 rows\n"
+      "[DEBUG][2023-01-13 15:24:49,396][137921925:0004] : getting uniques products...\n",
+      "[INFO ][2023-01-13 15:24:49,687][137921925:0018] : airlines dim - found 48 rows\n"
      ]
     },
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
     "    job_config = bigquery.LoadJobConfig(\n",
     "        create_disposition=create_disposition,\n",
     "        write_disposition=write_disposition,\n",
-    "        schema=schema\n",
+    "        schema=schema,\n",
     "    )\n",
     "    logger.info(f\"loading table: '{table_name}'\")\n",
     "    job = client.load_table_from_dataframe(df, destination=table_name, job_config=job_config)\n",
@@ -1073,16 +1073,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-01-13 11:10:44,718][1947479415:0029] : loading table: 'deb-01-372112.tickets.airlines'\n",
-      "[INFO ][2023-01-13 11:10:48,556][1947479415:0034] : loaded 48 rows into deb-01-372112:tickets.airlines\n",
-      "[INFO ][2023-01-13 11:10:48,561][2329088183:0007] : loaded products dim\n"
+      "[INFO ][2023-01-13 15:25:07,520][1347112994:0030] : loading table: 'deb-01-372112.tickets.airlines'\n",
+      "[INFO ][2023-01-13 15:25:10,882][1347112994:0035] : loaded 48 rows into deb-01-372112:tickets.airlines\n",
+      "[INFO ][2023-01-13 15:25:10,885][2732175864:0007] : loaded airlines dim\n"
      ]
     }
    ],
@@ -1093,7 +1093,7 @@
     "# load dataframe\n",
     "load_table(df, client, table_name, schema)\n",
     "\n",
-    "logger.info(f\"loaded products dim\")"
+    "logger.info(f\"loaded airlines dim\")"
    ]
   },
   {
@@ -1106,15 +1106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 11:31:20,678][2564274586:0004] : getting unique aiports...\n",
-      "[INFO ][2023-01-13 11:31:20,978][2564274586:0015] : customers dim - found 386 rows\n"
+      "[DEBUG][2023-01-13 14:18:21,145][2564274586:0004] : getting unique aiports...\n",
+      "[INFO ][2023-01-13 14:18:21,316][2564274586:0015] : customers dim - found 386 rows\n"
      ]
     },
     {
@@ -1366,16 +1366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-01-13 11:33:30,646][1947479415:0029] : loading table: 'deb-01-372112.tickets.airports'\n",
-      "[INFO ][2023-01-13 11:33:33,914][1947479415:0034] : loaded 386 rows into deb-01-372112:tickets.airports\n",
-      "[INFO ][2023-01-13 11:33:33,917][339070838:0006] : loaded airports dim\n"
+      "[INFO ][2023-01-13 14:18:25,425][1319364106:0030] : loading table: 'deb-01-372112.tickets.airports'\n",
+      "[INFO ][2023-01-13 14:18:30,287][1319364106:0035] : loaded 386 rows into deb-01-372112:tickets.airports\n",
+      "[INFO ][2023-01-13 14:18:30,289][339070838:0006] : loaded airports dim\n"
      ]
     }
    ],
@@ -1398,15 +1398,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 14:05:32,422][1153150727:0004] : getting unique passengers...\n",
-      "[INFO ][2023-01-13 14:05:32,618][1153150727:0019] : passengers dim - found 32 rows\n"
+      "[DEBUG][2023-01-13 15:41:10,581][1153150727:0004] : getting unique passengers...\n",
+      "[INFO ][2023-01-13 15:41:10,952][1153150727:0019] : passengers dim - found 32 rows\n"
      ]
     },
     {
@@ -2038,16 +2038,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 14:07:35,236][2348053882:0001] : assigning surrogate IDs: using sequential indexes\n",
-      "[INFO ][2023-01-13 14:07:35,239][2348053882:0015] : assigning passenger_sk: using md5 hash of passenger name\n",
-      "[INFO ][2023-01-13 14:07:35,259][2348053882:0022] : passenger_sk generated\n"
+      "[INFO ][2023-01-13 15:41:16,924][3072027600:0013] : assigning passenger_sk: using md5 hash of passenger name\n",
+      "[INFO ][2023-01-13 15:41:16,935][3072027600:0020] : passenger_sk generated\n"
      ]
     },
     {
@@ -2733,8 +2732,6 @@
     }
    ],
    "source": [
-    "logger.debug(f\"assigning surrogate IDs: using sequential indexes\")\n",
-    "\n",
     "from hashlib import md5\n",
     "\n",
     "\n",
@@ -2757,6 +2754,38 @@
     "logger.info(f\"passenger_sk generated\")\n",
     "\n",
     "display(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading to BigQuery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO ][2023-01-13 15:41:21,399][1347112994:0030] : loading table: 'deb-01-372112.tickets.passengers'\n",
+      "[INFO ][2023-01-13 15:41:26,091][1347112994:0035] : loaded 32 rows into deb-01-372112:tickets.passengers\n",
+      "[INFO ][2023-01-13 15:41:26,093][3525464016:0006] : loaded passengers dim\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the table name and schema from TABLE_METADATA config param\n",
+    "table_name = f\"{PROJECT_NAME}.{DATASET_NAME}.{TABLE_METADATA['passengers']['table_name']}\"\n",
+    "schema = schema=TABLE_METADATA['passengers']['schema']\n",
+    "# load the dataframe\n",
+    "load_table(df, client, table_name, schema)\n",
+    "logger.info(f\"loaded passengers dim\")"
    ]
   }
  ],
